<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

  <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/privacy"
      android:textColor="@color/btncolor"
      android:textSize="18sp"
      android:textStyle="bold" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/privacy_policy_details"
        android:textSize="16sp" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/agree"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/btncolor"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="1"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

  </LinearLayout>
</LinearLayout>