<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbg"
    android:orientation="vertical"
   android:gravity="center"
    tools:context="com.surah.rahman.audio.app.Activities.MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_100sdp"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo3"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/btn1"
        android:gravity="center"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/button"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn"
            />
        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btn"
            android:layout_alignTop="@id/btn"
            android:layout_alignRight="@id/btn"
            android:layout_alignBottom="@id/btn"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/recite"
            android:textColor="#FFFFFF"
            android:layout_alignStart="@id/btn"
            android:layout_alignEnd="@id/btn" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:id="@+id/btn2"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:id="@+id/audio"
            android:layout_centerHorizontal="true"
            android:src="@drawable/button"
            />
        <TextView
            android:id="@+id/myImageViewText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/audio"
            android:layout_alignTop="@id/audio"
            android:layout_alignRight="@id/audio"
            android:layout_alignBottom="@id/audio"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/listen_surah"
            android:textColor="#FFFFFFFF"
            android:layout_alignStart="@id/audio"
            android:layout_alignEnd="@id/audio" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:id="@+id/btn3"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/button"
            android:id="@+id/youtubep" />
        <TextView
            android:id="@+id/myImageViewText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/youtubep"
            android:layout_alignTop="@id/youtubep"
            android:layout_alignRight="@id/youtubep"
            android:layout_alignBottom="@id/youtubep"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/recent_listens"
            android:textColor="#FFFFFFFF"
            android:layout_alignStart="@id/youtubep"
            android:layout_alignEnd="@id/youtubep" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:id="@+id/btn4"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/button"
            android:layout_centerHorizontal="true"
            android:id="@+id/scrool"
            />
        <TextView
            android:id="@+id/myImageViewText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/scrool"
            android:layout_alignTop="@id/scrool"
            android:layout_alignRight="@id/scrool"
            android:layout_alignBottom="@id/scrool"
            android:layout_margin="1dp"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/video_surah"
            android:textColor="#FFFFFFFF"
            android:layout_alignStart="@id/scrool"
            android:layout_alignEnd="@id/scrool" />
    </RelativeLayout>











</LinearLayout>